<resources>
    <string name="app_name">PusherProject</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="brightness">Brightness</string>
    <string name="update">update</string>
    <string name="change_frequency">Change Frequency</string>
    <string name="frequency">Frequency</string>
    <string name="toggle_light">toggle light</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="noise_level">Noise Level</string>
    <string name="reset">Reset</string>
    <string name="btnsend">send</string>
    <string name="btntoggle_on_off">Toggle on/off</string>
</resources>
