<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/txtTemp5"
        android:layout_width="150dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/temperature"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtToDo" />

    <TextView
        android:id="@+id/txtHumidity2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/humidity"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTemp5" />

    <TextView
        android:id="@+id/txtBrightness2"
        android:layout_width="150dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/brightness"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHumidity2" />

    <TextView
        android:id="@+id/txtSound2"
        android:layout_width="150dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/noise_level"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBrightness2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:onClick="toDoListAdd"
        android:text="@string/btnsend"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtToDo"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/txtFrequency"
        android:layout_width="91dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/lblFreq"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblFreq"
        android:layout_width="133dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/frequency"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTemp"
        android:layout_width="90dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtTemp5"
        app:layout_constraintTop_toBottomOf="@+id/txtToDo" />

    <TextView
        android:id="@+id/txtHumidity"
        android:layout_width="90dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtHumidity2"
        app:layout_constraintTop_toBottomOf="@+id/txtTemp" />

    <TextView
        android:id="@+id/txtBrightness"
        android:layout_width="90dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtBrightness2"
        app:layout_constraintTop_toBottomOf="@+id/txtHumidity" />

    <TextView
        android:id="@+id/txtSound"
        android:layout_width="90dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtSound2"
        app:layout_constraintTop_toBottomOf="@+id/txtBrightness" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:onClick="disableTemperatureSensor"
        android:text="@string/btntoggle_on_off"
        android:textSize="8sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtTemp"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:onClick="disableHumiditySensor"
        android:text="@string/btntoggle_on_off"
        android:textSize="8sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtHumidity"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:onClick="disableLightSensor"
        android:text="@string/btntoggle_on_off"
        android:textSize="8sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtBrightness"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:onClick="disableSoundSensor"
        android:text="@string/btntoggle_on_off"
        android:textSize="8sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtSound"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/txtToDo"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Add todo item"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblFreq" />

    <Button
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:onClick="changeFrequency"
        android:text="Change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>